# motif-learning

./: LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: python-publish.yml
examples/: motif_learning_on_behavioural_data.ipynb  motif_learning_on_musical_data.ipynb  zinc_finger_protein_sequence.fasta
motif-learning/motif_learning/: Class_motif_learning.ipynb  motif_learning.py
motif-learning/tests/: __init__.py
motif_learning/: Class_motif_learning.ipynb  __init__.py  checking.py  motif_learning.py
src/: __init__.py  motif_learning.py
tests/: __init__.py  test_motif_learning.py
