[tool.poetry]
name = "motif-learning"
version = "0.0.1"
description = "A toolbox for learning motifs in time-series data"
authors = ["Akshey Kumar <ttomace@gmail.com>"]
readme = "README.md"
packages = [{include = "motif_learning"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
