[tool.poetry]
name = "motif-learning"
version = "0.0.1"
description = "A toolbox for learning motifs in time-series data"
authors = ["Akshey Kumar <ttomace@gmail.com>"]
readme = "README.md"
packages = [{include = "motif_learning"}]
license = "MIT"
homepage = "https://github.com/akshey-kumar/motif-learning"
repository = "https://github.com/akshey-kumar/motif-learning"
keywords = ["motif", "unsupervised", "motif learning", "Hasse diagram", "motif-composition", "akshey-kumar"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
